fixed the squished birdie in the motivational and badge messages and made the category colours dynamic according to the category added in the show page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -58,7 +58,7 @@ $save-green: rgb(116, 203, 116);
   border-radius: 30px;
 }
 
-.action-button-delete{
+.action-button-delete {
   text-align: left;
   padding-left: 16px;
   transition: .3s ease;
@@ -67,7 +67,7 @@ $save-green: rgb(116, 203, 116);
       background: darken($delete-red, 10);
     }
   i{
-    line-height: 250px;
+    line-height: 220px;
   }
 }
 
@@ -88,7 +88,7 @@ $save-green: rgb(116, 203, 116);
     background: darken($save-green, 10);
   }
   i{
-    line-height: 250px;
+    line-height: 220px;
   }
 }
 
