--- a/app/assets/stylesheets/components/_task_message.scss
+++ b/app/assets/stylesheets/components/_task_message.scss
@@ -1,5 +1,6 @@
 #pop-up-avatar{
   width: 120px;
+  height: 120px;
 }
 
 .modal-body {
